testData/inspections/relativeEntry/quickFix5.gitignore
<error descr="'./foobar' entry contains relative path">./<caret>foobar</error>